src/test/ui/chalkify/chalk_initial_program.stderr
error[E0277]: the trait bound `f32: Foo` is not satisfied
  --> $DIR/chalk_initial_program.rs:15:5
   |
LL |     gimme::<f32>();
   |     ^^^^^^^^^^^^ the trait `Foo` is not implemented for `f32`
   |
note: required by `gimme`
  --> $DIR/chalk_initial_program.rs:9:1
   |
LL | fn gimme<F: Foo>() { }
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
